Update the comment

--- a/Responsive Web Design (Project 2)/index.html
+++ b/Responsive Web Design (Project 2)/index.html
@@ -1,4 +1,7 @@
-/* HTML File of the second projecr for the Responsive Web Design Project */
+/* Tribute Page Project HTML File*/
+
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
