Added the closing tags

--- a/Responsive Web Design (Project 2)/index.html
+++ b/Responsive Web Design (Project 2)/index.html
@@ -47,5 +47,6 @@
                     </section>
                <footer>
                  <span id="foot">If you have time, you should read more about this incredible human being on his <a id="tribute-link" href="https://en.wikipedia.org/wiki/Norman_Borlaug" target="_blank">Wikipedia entry.<a></span>     
-</footer>
-</main>
+          </footer>
+        </main>
+      <html>
