--- a/JavaScript Algorithms and Data Structures (Project 3)/index.html
+++ b/JavaScript Algorithms and Data Structures (Project 3)/index.html
@@ -1,4 +1,4 @@
-/* Telephone Number Validator Project HTML File*/
+<!-- Telephone Number Validator Project HTML File -->
 
 <!DOCTYPE html>
 <html lang="en">
