--- a/JavaScript Algorithms and Data Structures (Project 2)/index.html
+++ b/JavaScript Algorithms and Data Structures (Project 2)/index.html
@@ -1,4 +1,4 @@
-/* Roman Numeral Converter Project HTML File*/
+<!-- Roman Numeral Converter Project HTML File -->
 
 <!DOCTYPE html>
 <html lang="en">
