The Legend has some issues with the coloring but passes all the test and works properly

--- a/Data Visualization (Project 2)/index.html
+++ b/Data Visualization (Project 2)/index.html
@@ -25,6 +25,7 @@
         border-radius: 10px solid black;
         pointer-events: none;
         font-size: 0.7rem;
+        opacity: 0.8;
     }
        
 
